# Erebus.Loaders

./: .gitignore  Erebus.Loaders.sln  LICENSE  README.md
Erebus.Loader/: CMakeLists.txt  Erebus.Loader.rc  Erebus.Loader.vcxproj  Erebus.Loader.vcxproj.filters  Makefile  config.hpp  loader.cpp  loader.hpp  main.cpp  resource.h  syswhispers3.c  syswhispers3.h
Erebus.Loader/include/: config.hpp  key.hpp  loader.hpp  shellcode.hpp  shellcode_optional.hpp  syswhispers3.h
Erebus.Loader/include/evasion/: callstack_spoof.hpp  evasion.hpp  syscall_backend.hpp  syscalls.hpp
Erebus.Loader/include/guardrails/: guardrails.hpp
Erebus.Loader/include/injection/: injection_createfiber.hpp  injection_dispatch.hpp  injection_earlycascade.hpp  injection_ntmapviewofsection.hpp  injection_ntqueueapcthread.hpp  injection_poolparty.hpp
Erebus.Loader/scripts/: strip_metadata.py
Erebus.Loader/src/: loader.cpp  main.cpp  syswhispers3-asm.x64.asm  syswhispers3.c
Erebus.Loader/src/evasion/: Syscalls-asm.x64.asm  Syscalls-asm.x86.asm  Syscalls.c  callstack_spoof.asm  callstack_spoof.cpp  callstack_spoof_gas.S  evasion.cpp  ntdll_unhook.cpp  sw3_backend.cpp  syscalls.cpp
Erebus.Loader/src/guardrails/: guardrails.cpp
Erebus.Loader/src/helpers/: api_hashing.cpp  compression_helpers.cpp  crypto_helpers.cpp  peb_helpers.cpp  process_helpers.cpp
Erebus.Loader/src/injection/: POOLPARTY_LICENSE.txt  injection_createfiber.cpp  injection_earlycascade.cpp  injection_ntmapviewofsection.cpp  injection_poolparty.cpp  (+1 more)
Erebus.Loader/tests/: test_erebus.cpp  test_guardrails.cpp  test_injection.cpp
(+41 files in other folders)
